# studies

./: .gitignore  pyproject.toml
chunk/: langchain_splitter.ipynb
deep_agent/: __init__.py  __main__.py
deep_agent/application/: __init__.py
deep_agent/application/agent/: __init__.py  graph.py  graph_builder.py  nodes.py  ports.py  state.py  tools.py
deep_agent/data/: clima_criciuma.md
deep_agent/domain/: __init__.py
deep_agent/infrastructure/: __init__.py
deep_agent/infrastructure/web_search/: __init__.py  tavily_adapter.py
deep_agent/presentation/: __init__.py  cli.py
deep_agent/shared/: __init__.py
embedding/: beg_embedding.ipynb
